--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,10 @@
 {
+  "printWidth": 80,
   "semi": true,
-  "trailingComma": "all",
   "singleQuote": true,
-  "printWidth": 100,
-  "tabWidth": 2
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "bracketSpacing": true,
+  "endOfLine": "auto",
+  "useTabs": false
 }
