--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,11 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": [".eslintrc.cjs", "src"],
+  "include": [
+    ".eslintrc.cjs",
+    "tailwind.config.js",
+    "postcss.config.js",
+    "src"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
